feat: complete static design for SignUp page

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
+
+.font-vibes {
+  font-family: "Great Vibes", cursive !important;
+}
+
+body {
+  @apply bg-black;
+}
