--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,24 @@
 body {
   @apply bg-black overflow-y-scroll;
 }
+
+/* Custom scrollbar styles */
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #7e7e7e #303030; /* thumb and track colors */
+}
+
+/* For Webkit browsers (Chrome, Safari, etc.) */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #7e7e7e;
+  border-radius: 8px; /* Round corners of the thumb */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #303030;
+  border-radius: 8px; /* Round corners of the track */
+}
