--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,12 @@ body {
   background-color: #303030;
   border-radius: 8px; /* Round corners of the track */
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
